added image and header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <header>Hello World</header>
     <h1>Deployment Afternoon Lab!</h1>
+    <img src="https://cdn.pixabay.com/photo/2012/04/12/13/12/snowboard-29970_960_720.png" />
 </body>
 </html>
