--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="css">
 </head>
 <body>
-    <header>Hello World</header>
     <h1>Deployment Afternoon Lab!</h1>
-    <img src="https://cdn.pixabay.com/photo/2012/04/12/13/12/snowboard-29970_960_720.png" />
+    <header>Snowboarding = Life</header>
+    <img src="https://cdn.pixabay.com/photo/2012/04/12/13/12/snowboard-29970_960_720.png" alt="Snowboard tail grab" />
+    <p>deploying apps on heroku is the easiest thing ever!</p>
+    <button id="click-me">Click Me!</button>
+    <br/>
+    <video src="./Snowboarding - 786 (1).mp4" control></video>
+    <script src="/index.js"></script>
+    <!-- <script src="/js"></script> -->
 </body>
 </html>
