--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <br/>
     <video src="./Snowboarding - 786 (1).mp4" control></video>
     <script src="/index.js"></script>
-    <!-- <script src="/js"></script> -->
+    <script src="/js"></script>
 </body>
 </html>
