--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>deploying apps on heroku is the easiest thing ever!</p>
     <button id="click-me">Click Me!</button>
     <br/>
-    <video src="./Snowboarding - 786 (1).mp4" control></video>
+    <video src="./Snowboarding - 786 (1).mp4" controls></video>
     <script src="/index.js"></script>
     <script src="/js"></script>
 </body>
